removing menu Button and adding Logout Dialoge Box

--- a/app/src/main/res/layout/activity_contactus.xml
+++ b/app/src/main/res/layout/activity_contactus.xml
@@ -45,5 +45,12 @@
         android:id="@+id/btn_mail"
         android:text="Mail Us: aareflex@aol.com"/>
     </LinearLayout>
-
+<ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/iv_log"
+    android:src="@android:drawable/ic_lock_power_off"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true" />
 </RelativeLayout>
