--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -37,6 +37,7 @@
             android:paddingRight="14dp"
             android:textSize="16dp"
             android:hint="First Name"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
             android:paddingLeft="14dp"
             android:background="@drawable/textshape"
             android:drawableLeft="@drawable/user"
@@ -54,6 +55,7 @@
             android:textSize="16dp"
             android:hint="Last Name"
             android:paddingLeft="14dp"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
             android:background="@drawable/textshape"
             android:drawableLeft="@drawable/last_name"
             android:textColor="#000000"
@@ -85,6 +87,7 @@
             android:layout_marginTop="20dp"
             android:textSize="16dp"
             android:hint="Number"
+            android:maxLength="10"
             android:inputType="number"
             android:paddingLeft="14dp"
             android:background="@drawable/textshape"
