--- a/app/src/main/res/layout/activity_contactus.xml
+++ b/app/src/main/res/layout/activity_contactus.xml
@@ -15,36 +15,7 @@
         android:titleTextColor="#ffffff">
 
     </android.support.v7.widget.Toolbar>
-   <!-- <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:layout_below="@+id/toolbar"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="115dp">
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/buttonbackground"
-        android:textColor="@color/White"
-        android:id="@+id/btn_call"
-        android:textSize="20dp"
-        android:text="Call Us: 818-841-7741"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/buttonbackground"
-        android:textColor="@color/White"
-        android:textSize="20dp"
-        android:layout_below="@+id/btn_call"
-        android:textAllCaps="false"
-        android:id="@+id/btn_mail"
-        android:text="Mail Us: aareflex@aol.com"/>
-    </LinearLayout>-->
+
     <ImageView
         android:layout_width="165dp"
         android:layout_height="165dp"
@@ -112,6 +83,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dip"
+                        android:layout_marginBottom="30dp"
                         >
                         <!--  FirstName-->
                         <EditText android:layout_width="fill_parent"
@@ -120,7 +92,8 @@
                             android:layout_marginBottom="20dp"
                             android:paddingTop="4dp"
                             android:hint="Email"
-                            android:background="@drawable/textshape"                            android:textColorHint="#D3D3D3"
+                            android:background="@drawable/textshape"
+                            android:textColorHint="#D3D3D3"
                             android:paddingBottom="4dp"
                             android:paddingLeft="8dp"
                             android:layout_marginRight="4dp"
