--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="White">#ffffff</color>
     <color name="dark">#888B10</color>
     <color name="secondDark">#9A9D24</color>
+    <color name="RED">#ff0000</color>
 </resources>
