--- a/app/src/main/res/layout/activity_contactus.xml
+++ b/app/src/main/res/layout/activity_contactus.xml
@@ -6,22 +6,13 @@
     android:background="@color/Background"
     tools:context="com.bizhawkz.billflocco.Contactus">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="58dp"
-        android:background="@color/Background"
-        android:minHeight="?attr/actionBarSize"
-        android:titleTextColor="#ffffff">
-
-    </android.support.v7.widget.Toolbar>
-
     <ImageView
         android:layout_width="165dp"
         android:layout_height="165dp"
         android:src="@drawable/logo"
         android:id="@+id/logoimage"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="26dp"
+        android:layout_below="@+id/toolbar"
         android:layout_centerHorizontal="true" />
     <ScrollView
         android:layout_width="match_parent"
@@ -83,7 +74,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dip"
-                        android:layout_marginBottom="30dp"
+                        android:layout_marginBottom="20dp"
                         >
                         <!--  FirstName-->
                         <EditText android:layout_width="fill_parent"
@@ -173,7 +164,7 @@
     android:layout_height="wrap_content"
     android:id="@+id/iv_log"
     android:src="@android:drawable/ic_lock_power_off"
-    android:layout_alignParentBottom="true"
+    android:layout_alignParentTop="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentEnd="true" />
 </RelativeLayout>
