--- a/app/src/main/res/layout/activity_reflexology_research.xml
+++ b/app/src/main/res/layout/activity_reflexology_research.xml
@@ -21,17 +21,18 @@
         android:background="@color/Background">
 
     </LinearLayout>
-    <android.support.v4.widget.SwipeRefreshLayout
+    <!--<android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <WebView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/web1">
-        </WebView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+
+    </android.support.v4.widget.SwipeRefreshLayout>-->
+    <WebView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/web1">
+    </WebView>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
