--- a/app/src/main/res/layout/activity_research_option.xml
+++ b/app/src/main/res/layout/activity_research_option.xml
@@ -31,16 +31,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:id="@+id/btn_1"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
             android:textAllCaps="false"
+
             android:text="Reflexology Reaserch 380+Abstract from around the world"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:id="@+id/btn_2"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
@@ -51,6 +56,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:id="@+id/btn_3"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
@@ -62,6 +69,8 @@
             android:layout_marginTop="4dp"
             android:textSize="16dp"
             android:id="@+id/btn_4"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
             android:textAllCaps="false"
@@ -72,26 +81,32 @@
             android:layout_marginTop="4dp"
             android:textSize="16dp"
             android:id="@+id/btn_5"
-            android:background="@drawable/buttonbackground"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
             android:textAllCaps="false"
-            android:text="PMS Reflexology Research Study:Psychological"/>
+            android:text="PMS Reflexology Research Study:   Psychological"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
             android:id="@+id/btn_6"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
             android:textAllCaps="false"
-            android:text="PMS Reflexology Research Study: where mention"/>
+            android:text="PMS Reflexology Research Study: where Mention"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
             android:id="@+id/btn_7"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
             android:textAllCaps="false"
@@ -101,6 +116,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:id="@+id/btn_8"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
@@ -111,6 +128,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:id="@+id/btn_9"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
@@ -122,6 +141,8 @@
             android:layout_marginTop="4dp"
             android:textSize="16dp"
             android:id="@+id/btn_10"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
             android:textAllCaps="false"
@@ -132,6 +153,8 @@
             android:layout_marginTop="4dp"
             android:textSize="16dp"
             android:id="@+id/btn_11"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
             android:textAllCaps="false"
@@ -142,6 +165,8 @@
             android:layout_marginTop="4dp"
             android:textSize="16dp"
             android:id="@+id/btn_12"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
             android:textAllCaps="false"
@@ -151,6 +176,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:id="@+id/btn_13"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
@@ -161,6 +188,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textSize="16dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:id="@+id/btn_14"
             android:background="@drawable/buttonbackground"
             android:textColor="@color/White"
